autofocus login username

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -134,7 +134,7 @@
 
     <div class="form">
         <form class="login-form" th:action="@{/login}" method="post">
-            <input type="text" name="username" placeholder="username"/>
+            <input type="text" name="username" placeholder="username" autofocus="autofocus"/>
             <input type="password" name="password" placeholder="password"/>
             <p class="message"><label for="remember-me">Remember Me?</label><input type="checkbox" id="remember-me" name="remember-me"/></p>
             <button>login</button>
