refactored code and utils improved week-statistics tab

--- a/src/main/resources/io/rocketbase/toggl/ui/design.css
+++ b/src/main/resources/io/rocketbase/toggl/ui/design.css
@@ -29,6 +29,12 @@
     opacity: 0.8;
 }
 
+.v-label.info button {
+    float: right;
+    font-weight: 400;
+    line-height: 1;
+}
+
 .v-label.info.left-right span {
     position: absolute;
     left: 0;
